# hospital_management

./: .gitignore  CMakeLists.txt  Makefile  hospital.db
.github/workflows/: hospital_management-pipeline.yml
src/: main.cpp
src/auth/: AuthController.cpp  AuthController.h  LoginDialog.cpp  LoginDialog.h
src/core/: AppointmentController.cpp  AppointmentController.h  BillingController.cpp  BillingController.h  DepartmentController.cpp  DepartmentController.h  DoctorController.cpp  DoctorController.h  HospitalController.cpp  HospitalController.h  MedicalRecordController.cpp  MedicalRecordController.h  PatientController.cpp  PatientController.h  RegistrationController.cpp  RegistrationController.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/models/: Appointment.cpp  Appointment.h  Billing.cpp  Billing.h  Department.cpp  Department.h  Doctor.cpp  Doctor.h  MedicalRecord.cpp  MedicalRecord.h  Patient.cpp  Patient.h  Registration.cpp  Registration.h
src/settings/: AppSettings.cpp  AppSettings.h  ThemeManager.cpp  ThemeManager.h
src/utils/: DateTimeHelper.cpp  DateTimeHelper.h  PDFExporter.cpp  PDFExporter.h  QRCodeGenerator.cpp  QRCodeGenerator.h  Validator.cpp  Validator.h
src/views/: AppointmentView.cpp  AppointmentView.h  AuditLogView.cpp  AuditLogView.h  BillingView.cpp  BillingView.h  DashboardView.cpp  DashboardView.h  DepartmentView.cpp  DepartmentView.h  DoctorView.cpp  DoctorView.h  MainWindow.cpp  MainWindow.h  MedicalRecordView.cpp  MedicalRecordView.h  PatientTimelineView.cpp  PatientTimelineView.h  PatientView.cpp  PatientView.h  RegistrationView.cpp  RegistrationView.h  ReportsView.cpp  ReportsView.h  SettingsDialog.cpp  SettingsDialog.h
src/widgets/: DataTable.cpp  DataTable.h  GlobalSearchBar.cpp  GlobalSearchBar.h  PatientCard.cpp  PatientCard.h  SearchBar.cpp  SearchBar.h  SidebarMenu.cpp  SidebarMenu.h  StatCard.cpp  StatCard.h  StatusBadge.cpp  StatusBadge.h  ToastNotification.cpp  ToastNotification.h
